--- a/package.json
+++ b/package.json
@@ -1,15 +1,35 @@
 {
   "name": "very-simple-schema",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "An alternative SimpleSchema implementation",
+  "main": "lib/index.js",
   "scripts": {
+    "build": "babel src --out-dir lib",
+    "clean": "rimraf lib coverage",
+    "coverage": "babel-node $(npm bin)/isparta cover _mocha -- src/**/*.test.js",
+    "coverage-report": "http-server ./coverage/lcov-report",
+    "lint": "eslint src",
+    "prepublish": "npm run clean && npm run build",
     "test": "mocha --compilers js:babel-core/register src/**/*.test.js",
     "test-watch": "mocha --watch --compilers js:babel-core/register src/**/*.test.js"
   },
-  "author": "apendua",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/apendua/very-simple-schema.git"
+  },
+  "keywords": [
+    "meteor",
+    "schema",
+    "validation"
+  ],
+  "author": "Tomasz Lenarcik <apendua@gmail.com>",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/apendua/very-simple-schema/issues"
+  },
+  "homepage": "https://github.com/apendua/very-simple-schema",
   "devDependencies": {
+    "babel-cli": "^6.23.0",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-runtime": "^6.15.0",
@@ -21,6 +41,9 @@
     "eslint": "^3.12.2",
     "eslint-config-airbnb-base": "^11.0.1",
     "eslint-plugin-import": "^2.2.0",
-    "mocha": "^3.2.0"
+    "http-server": "^0.9.0",
+    "isparta": "^4.0.0",
+    "mocha": "^3.2.0",
+    "rimraf": "^2.6.1"
   }
 }
