--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "babel src --out-dir lib",
+    "build-webpack": "webpack --progress",
     "clean": "rimraf lib coverage",
     "coverage": "babel-node $(npm bin)/isparta cover _mocha -- 'src/**/*.test.js'",
     "coverage-report": "http-server ./coverage/lcov-report",
@@ -38,12 +39,14 @@
     "babel-preset-stage-3": "^6.22.0",
     "babel-root-import": "^4.1.5",
     "chai": "^3.5.0",
+    "clean-webpack-plugin": "^0.1.15",
     "eslint": "^3.12.2",
     "eslint-config-airbnb-base": "^11.0.1",
     "eslint-plugin-import": "^2.2.0",
     "http-server": "^0.9.0",
     "isparta": "^4.0.0",
     "mocha": "^3.2.0",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "webpack": "^2.2.1"
   }
 }
