--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "isparta": "^4.0.0",
     "mocha": "^3.2.0",
     "rimraf": "^2.6.1",
+    "sinon": "^1.17.7",
+    "sinon-chai": "^2.8.0",
     "webpack": "^2.2.1"
   }
 }
