--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "very-simple-schema",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "An alternative SimpleSchema implementation",
-  "main": "lib/index.js",
+  "main": "./lib/index.js",
   "scripts": {
     "build": "babel src --out-dir lib",
     "build-webpack": "webpack --progress",
