--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "build": "babel src --out-dir lib",
     "build-webpack": "webpack --progress",
     "clean": "rimraf lib coverage",
-    "coverage": "babel-node $(npm bin)/isparta cover _mocha -- 'src/**/*.test.js'",
-    "coverage-report": "http-server ./coverage/lcov-report",
+    "coverage": "jest --coverage",
     "lint": "eslint src",
     "prepublish": "npm run clean && npm run build",
-    "test": "mocha --compilers js:babel-core/register 'src/**/*.test.js'",
-    "test-watch": "mocha --watch --compilers js:babel-core/register 'src/**/*.test.js'"
+    "test": "jest",
+    "test-watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -39,17 +38,12 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "babel-root-import": "^4.1.5",
-    "chai": "^3.5.0",
     "clean-webpack-plugin": "^0.1.15",
     "eslint": "^3.12.2",
     "eslint-config-airbnb-base": "^11.0.1",
     "eslint-plugin-import": "^2.12.0",
-    "http-server": "^0.11.1",
-    "isparta": "^4.0.0",
-    "mocha": "^3.2.0",
+    "jest": "^23.2.0",
     "rimraf": "^2.6.1",
-    "sinon": "^1.17.7",
-    "sinon-chai": "^2.8.0",
     "webpack": "^2.2.1"
   },
   "dependencies": {
