--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "very-simple-schema",
-  "version": "0.0.10",
+  "version": "1.0.0-rc0",
   "description": "An alternative SimpleSchema implementation",
   "main": "./lib/index.js",
   "scripts": {
